# PortfolioPilot

./: .gitignore
backend/: README.md  alembic.ini  portfolio.db  # Passe dies an deine Datenbank an  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6329c90e4549_add_profile_table.py  6545e7d7a304_create_users_table.py
backend/src/portfolio_pilot_backend/: app.py  models.py  test.db
backend/src/portfolio_pilot_backend/api/: UserAPI.py  db.py  handle_request.py  interface_api.py  test.db  user_api.py
backend/src/portfolio_pilot_backend/repositories/: user_repository.py
backend/src/portfolio_pilot_backend/services/: AuthService.py  UserService.py  auth_service.py  user_service.py
backend/src/test/: import.py
backend/tests/: test_models.py
backend/tests/api/integration/: test_user_api.py
backend/tests/repositories/: test_user_repository.py
backend/tests/services/: test_user_service.py
